@@ -1,3 +1,13 @@
+Thu Jan  9 17:46:36 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>
+
+        * tests/DCPS/Thrasher/ParticipantTask.h:
+        * tests/DCPS/Thrasher/ParticipantTask.cpp:
+        * tests/DCPS/Thrasher/Publisher.cpp:
+        * tests/DCPS/Thrasher/Subscriber.cpp:
+        * tests/DCPS/Thrasher/run_test.pl:
+
+          Serialize Entity creation for the test threads.
+
 Thu Jan  9 16:30:31 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>
 
         * tests/DCPS/LargeSample/run_test.pl:
